--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             <span class="tech-tag">JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://aditya-git-07.github.io/" target="_blank" class="project-link primary">
+                            <a href="https://aditya-git-07.github.io/portfolio/" target="_blank" class="project-link primary">
                                 <i class="fas fa-external-link-alt"></i>
                                 Live Demo
                             </a>
